--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,11 @@
 <html>
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>React-Babel-Webpack Boileplate</title>
+
   <body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" version="1.0" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"  version="1.0" crossorigin="anonymous"></script>
     <script type="text/javascript" src="bundle.js"></script>
+
   </body>
 </html>
